feat: metadata (#25)
* feat: metadata

* fix linting and such
