# rdf_diff_store/models.py
@@ -14,6 +14,11 @@ class Message(BaseModel):
     message: Optional[str] = None
 
 
+class Metadata(BaseModel):
+    empty: bool
+    start_time: Optional[int] = Field(None, description="Seconds since epoch")
+
+
 class ID(BaseModel):
     id: str
 
